# DeviceDetection

./: .gitignore  .gitmodules  DeviceDetection.sln  README.md  create_release.bat
cpuid/: cpuid.vcxproj
cuda_device_detection/: CMakeLists.txt  CudaDetection.cpp  CudaDetection.h  CudaDevice.h  README.md  cuda_dev_detection.cpp  cuda_dev_detection.h  cuda_device_detection.cpp  cuda_device_detection.h  cuda_device_detection.vcxproj  json_helpers.cpp  json_helpers.h  main.cpp  nvidia_nvml_helper.cpp  nvidia_nvml_helper.h
cuda_device_detection/nodejs/: binding.gyp  index.js  package.json
cuda_device_detection/nodejs/nodejs_native_src/: linux_module_test.cpp  module.cpp
device_detection/: device_detection.vcxproj  main.cpp
device_detection_cpu/: InstructionSet.cpp  device_detection_cpu.vcxproj
device_detection_cuda_nvml/: .gitignore  README.md  device_detection_cuda_nvml.cpp  device_detection_cuda_nvml.h  device_detection_cuda_nvml.vcxproj
device_detection_cuda_nvml/cuda8/: CUDA 8.0.props  CUDA 8.0.targets  CUDA 8.0.xml
device_detection_opencl/: .gitignore  README.md  device_detection_opencl.cpp  device_detection_opencl.h  device_detection_opencl.vcxproj  device_detection_opencl_adl.cpp  device_detection_opencl_adl.h
device_detection_opencl/include/: adl_defines.h  adl_sdk.h  adl_structures.h
extras/vendor_parser/: DeviceFilter.py  rawDevices.txt  vendor_ids
opencl_device_detection/: AMDOpenCLDeviceDetection.cpp  AMDOpenCLDeviceDetection.h  CMakeLists.txt  OpenCLDevice.h  README.md  cl_ext.h  cl_ext.hpp  json_helpers.cpp  json_helpers.h  main.cpp  ocl_dev_detection.cpp  ocl_dev_detection.h  opencl_device_detection.cpp  opencl_device_detection.h  opencl_device_detection.vcxproj
opencl_device_detection/nodejs/: README.md  binding.gyp  index.js  package.json
opencl_device_detection/nodejs/nodejs_native_src/: module.cpp
shared/: README.md  trivial_json_printer.hpp
